--- a/.github/workflows/website-scans.yaml
+++ b/.github/workflows/website-scans.yaml
@@ -22,5 +22,6 @@ jobs:
       if: always()
       uses: mikepenz/action-junit-report@v3
       with:
+        check_name: results (${{ matrix.sites }})
         report_paths: '**/dastardly-report.xml'
         require_tests: true
