--- a/.github/workflows/website-scans.yaml
+++ b/.github/workflows/website-scans.yaml
@@ -22,6 +22,7 @@ jobs:
       if: always()
       uses: mikepenz/action-junit-report@v3
       with:
+        detailed_summary: true
         check_name: results (${{ matrix.sites }})
         report_paths: '**/dastardly-report.xml'
         require_tests: true
