--- a/.github/workflows/website-scans.yaml
+++ b/.github/workflows/website-scans.yaml
@@ -22,7 +22,6 @@ jobs:
       if: always()
       uses: mikepenz/action-junit-report@v3
       with:
-        detailed_summary: true
-        check_name: results (${{ matrix.sites }})
+        annotate_only: true
         report_paths: '**/dastardly-report.xml'
         require_tests: true
