--- a/.github/workflows/website-scans.yaml
+++ b/.github/workflows/website-scans.yaml
@@ -9,6 +9,7 @@ jobs:
   scan:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         sites:
         - https://ginandjuice.shop/
