--- a/.github/workflows/website-scans.yaml
+++ b/.github/workflows/website-scans.yaml
@@ -23,6 +23,6 @@ jobs:
       if: always()
       uses: mikepenz/action-junit-report@v3
       with:
-        annotate_only: true
+        check_name: scan results (${{ matrix.sites }})
         report_paths: '**/dastardly-report.xml'
         require_tests: true
